# fTetWild

./: .gitignore  CMakeLists.txt  vcpkg.json
api/: ftetwild.cpp
app/: CMakeLists.txt  main.cpp
cmake/: FloatTetwildDependencies.cmake  Warnings.cmake  ftetwildConfig.cmake
include/floattetwild/: CutMesh.h  TriangleInsertion.h
include/ftetwild/: dll_export.h  ftetwild.h
src/: CMakeLists.txt  LocalOperations.cpp  MeshIO.cpp  Simplification.cpp  TriangleInsertion.cpp  auto_table.cpp  main.cpp
src/floattetwild/: CMakeLists.txt  CutMesh.cpp  EdgeCollapsing.cpp  EdgeSplitting.cpp  EdgeSwapping.cpp  FloatTetDelaunay.cpp  FloatTetwild.cpp  LocalOperations.cpp  Logger.cpp  MeshImprovement.cpp  Simplification.cpp  TriangleInsertion.cpp  VertexSmoothing.cpp  intersections.cpp
src/ftetwild/: CMakeLists.txt  ftetwild.cpp
src/ftetwild/test/: main.cpp
tests/: CMakeLists.txt  test_subdivision.cpp  test_table.cpp  tests.cpp
